--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -14,4 +14,4 @@ jobs:
         id: autoyapf
         uses: mritunjaysharma394/autoyapf@v2
         with:
-          args: --style google .
+          args: --style google farmhand.py
