--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -12,7 +12,7 @@ jobs:
         python-version: 3.8
     - name: Install Dependencies
       run: |
-        pip install mypy==1.3.0
+        pip install mypy
     - name: mypy
       run: |
         mypy .
@@ -28,7 +28,7 @@ jobs:
         python-version: 3.8
     - name: Install Dependencies
       run: |
-        pip install yapf==0.32.0
+        pip install yapf
     - name: yapf
       run: |
         yapf --style google --diff farmhand.py
