--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -4,32 +4,19 @@ jobs:
   mypy:
     runs-on: ubuntu-latest
     name: mypy
+    container: le91688/dockerized_mypy:3.8-1.3.0
     steps:
-    - uses: actions/checkout@v1
-    - name: Set up Python 3.8
-      uses: actions/setup-python@v1
-      with:
-        python-version: 3.8
-    - name: Install Dependencies
-      run: |
-        pip install mypy
     - name: mypy
       run: |
-        mypy .
+        .
 
   yapf:
     runs-on: ubuntu-latest
+    container: le91688/dockerized_yapf:3.8-0.33.0
     name: yapf
     steps:
     - uses: actions/checkout@v1
-    - name: Set up Python 3.8
-      uses: actions/setup-python@v1
-      with:
-        python-version: 3.8
-    - name: Install Dependencies
-      run: |
-        pip install yapf
     - name: yapf
       run: |
-        yapf --style google --diff farmhand.py
+        --style google --diff farmhand.py
 
