--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -4,19 +4,20 @@ jobs:
   mypy:
     runs-on: ubuntu-latest
     name: mypy
-    container: le91688/dockerized_mypy:3.8-1.3.0
     steps:
+    - uses: actions/checkout@v1
     - name: mypy
-      run: |
-        .
+      uses: docker://le91688/dockerized_mypy:3.8-1.3.0
+      with:
+        args: .
 
   yapf:
     runs-on: ubuntu-latest
-    container: le91688/dockerized_yapf:3.8-0.33.0
     name: yapf
     steps:
     - uses: actions/checkout@v1
     - name: yapf
-      run: |
-        --style google --diff farmhand.py
+      uses: docker://le91688/dockerized_yapf:3.8-0.33.0
+      with:
+        args: --style google --diff farmhand.py
 
