--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -1,32 +1,24 @@
 name: CI
-on: [push]
+
+on:
+  push:
+
 jobs:
-  mypy:
-    runs-on: ubuntu-latest
-    name: mypy
-    steps:
-    - uses: actions/checkout@v1
-    - name: mypy
-      uses: docker://le91688/dockerized_mypy:3.8-1.3.0
-      with:
-        args: .
+  call-lint:
+    uses: ./.github/workflows/lint.yml
 
-  black:
-    runs-on: ubuntu-latest
-    name: black
-    steps:
-    - uses: actions/checkout@v1
-    - name: black
-      uses: docker://pyfound/black:23.3.0
-      with:
-        args: black --check farmhand.py
+  call-deploy:
+    if: contains(github.ref, 'refs/tags/')
+    uses: ./.github/workflows/deploy.yml
+    secrets: inherit
+    needs: [call-lint]
 
-  isort:
-    runs-on: ubuntu-latest
-    name: isort
-    steps:
-    - uses: actions/checkout@v1
-    - name: isort
-      uses: docker://le91688/dockerized_isort:3.8-5.12.0
-      with:
-        args: -c farmhand.py
+  call-publish:
+    if: contains(github.ref, 'refs/tags/')
+    uses: ./.github/workflows/publish.yml
+    secrets: inherit
+    needs: [call-lint]
+
+
+
+
