--- a/.github/workflows/lint.yml
+++ b/.github/workflows/lint.yml
@@ -22,7 +22,7 @@ jobs:
     - name: black
       uses: docker://pyfound/black:23.3.0
       with:
-        args: black --check farmhand.py
+        args: black --check src/farmhand
 
   isort:
     runs-on: ubuntu-latest
@@ -32,4 +32,4 @@ jobs:
     - name: isort
       uses: docker://le91688/dockerized_isort:3.8-5.12.0
       with:
-        args: -c farmhand.py
+        args: -c src/farmhand
