--- a/.github/workflows/lint.yml
+++ b/.github/workflows/lint.yml
@@ -10,7 +10,7 @@ jobs:
     steps:
     - uses: actions/checkout@v1
     - name: mypy
-      uses: docker://le91688/dockerized_mypy:3.8-1.3.0
+      uses: docker://ghcr.io/zetier/dockerized_mypy:3.8-1.3.0
       with:
         args: .
 
@@ -30,6 +30,6 @@ jobs:
     steps:
     - uses: actions/checkout@v1
     - name: isort
-      uses: docker://le91688/dockerized_isort:3.8-5.12.0
+      uses: docker://ghcr.io/zetier/dockerized_isort:3.8-5.12.0
       with:
         args: -c src/farmhand
